<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_selector_bg"
        android:scaleType="fitXY"
        android:clickable="true"
        android:src="@drawable/banner_faq" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="vertical"
        tools:context=".FAQ" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:background="@drawable/faq_card_selector"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="8dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_q_1"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_a_1"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:background="@drawable/faq_card_selector"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="8dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_q_2"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_a_2"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:background="@drawable/faq_card_selector"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="8dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_q_3"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_a_3"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:background="@drawable/faq_card_selector"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="8dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_q_4"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_a_4"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:background="@drawable/faq_card_selector"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="8dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_q_5"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_a_5"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:background="@drawable/faq_card_selector"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="8dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_q_6"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_a_6"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:background="@drawable/faq_card_selector"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="8dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_q_7"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_a_7"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:background="@drawable/faq_card_selector"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="8dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_q_8"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_a_8"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dip"
                android:background="@drawable/faq_card_selector"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="8dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_q_9"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_a_9"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>